# mipt_dgap

./: .gitignore  document.tex  fig1.eps
1_semester/Labs/LAB_1_2_1/: 1_2_1.tex  raw_values.xlsx  titlepage.tex
1_semester/Labs/LAB_1_2_2/: 1_2_2.tex
1_semester/Labs/LAB_1_2_3/: 1_2_3.tex  raw_values.xlsx
1_semester/Labs/LAB_1_2_5/: 1_2_5.tex
1_semester/Labs/LAB_1_4_1/: document.tex  titlepage.tex
1_semester/Labs/LAB_1_4_8/: 1_4_8.tex  Book1.xlsx  titlepage.tex
1_semester/Mechanics/VPV/: VPV.tex  titlepage.tex
2_semester/GorPhys/: lectures.tex  lectures.toc  presentation.nav  presentation.out  presentation.tex  presentation.toc  referat.tex
2_semester/Termodynamics/VPV/: titlepage.tex  vpv.tex
2_semester/Termodynamics/VPV/visualize/: ex_plot.py  visual.py
2_semester/Termodynamics/seminar/: seminar.tex
2_semester/cpp/2nd test/: 4.cpp
2_semester/cpp/c/: test.c
2_semester/cpp_labs/: z.cpp
2_semester/cpp_labs/cpp/: 1.cpp  2.cpp  tempCodeRunnerFile.cpp  我起床八点种。我不吃早饭。八点四十分出发。.ini
2_semester/cpp_labs/lab34/lab_3/code/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
2_semester/cpp_labs/lab34/lab_4/: task1.cpp  task3.cpp
2_semester/cpp_labs/lab_1/: ConsoleApplication3.cpp  search.cpp  search_report.tex
2_semester/cpp_labs/lab_1/plots/: search_plot_1.py
2_semester/cpp_labs/lab_1/search/: CMakeLists.txt  ConsoleApplication3.cpp  poisk.cpp
2_semester/cpp_labs/lab_1/search/code/: CMakeLists.txt  search.cpp  search_report.tex  strategy.cpp  sum.cpp  titlepage.tex
2_semester/cpp_labs/lab_1/sumoftwo/: sum.cpp
2_semester/cpp_labs/lab_2/: CMakeLists.txt  sorts.cpp
2_semester/cpp_labs/lab_2/george_golovinov_304_lab2/: CMakeLists.txt  lab_2_report.tex  sorts.cpp  titlepage.tex
2_semester/cpp_labs/lab_2/report/: lab_2_report.tex  titlepage.tex
2_semester/cpp_labs/lab_3/code/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
2_semester/cpp_labs/lab_3/data/: task2.csv  task2_1.csv  task3_2.csv  task3_3.csv
2_semester/cpp_labs/lab_3/report/: lab_3_report.tex
2_semester/cpp_labs/lab_4/: task2.cpp
2_semester/cpp_labs/lab_4/report/: titlepage.tex
2_semester/cpp_labs/lab_4_1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
2_semester/cpp_labs/lab_4_1/data/: avl.csv  bin_tree.csv  hash.csv
2_semester/labs/: Book1.xlsx
2_semester/labs/lab_2_1_2/: Book2.xlsx  lab_2_1_2.tex  plots.py  titlepage.tex
2_semester/labs/lab_2_1_6/: 2.1.6.xlsx  2_1_6.tex  titlepage.tex
2_semester/labs/lab_2_2_3/: 2.2.3.xlsx  2.xlsx  2_2_3.synctex(busy)  2_2_3.tex  titlepage.tex  ~$2.2.3.xlsx
2_semester/labs/lab_2_2_3/mnk/: mnk.py
2_semester/labs/lab_2_2_5/: 2_2_5.xlsx
2_semester/labs/lab_2_3_1/: Book1.xlsx
2_semester/labs/lab_2_5_1/: 2_5_1.xlsx
2_semester/matan/1zadaniye/: document.tex  titlepage.tex
2_semester/py/: 1.py
cpp/: .gitignore  2_2.cpp
cpp/2nd test/: 2_test.cpp  3.cpp
labs/lab_2_1_2/: lab_2_1_2.tex  titlepage.tex
matan/1zadaniye/: document.tex
(+46 files in other folders)
